kubernetes/overlays/k3s/traefik.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: analytics-for-spotify
  namespace: analytics-for-spotify
  labels:
    app.kubernetes.io/instance: analytics-for-spotify
spec:
  entryPoints:
    - web
  routes:
    - match: "Host(`spotify.<path:secret/data/homelab/domain#url>`)"
      kind: Rule
      services:
        - name: analytics-for-spotify
          port: 8080
